kubernetes/apps/gateway-infra/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: gateway-infra
spec:
  gatewayClassName: traefik
  listeners:
    - name: http-redirect
      protocol: HTTP
      port: 8000
      allowedRoutes:
        namespaces:
          from: Same

    - name: https-wildcard
      protocol: HTTPS
      port: 8443
      hostname: "*.salami.network"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-salami-network-tls
      allowedRoutes:
        namespaces:
          from: All

    - name: ssh
      protocol: TCP
      port: 2222
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: TCPRoute
